Update Getting Started page for visual design Phase 2.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1423 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -65,7 +65,7 @@
                             <li>Choose a plant that you can look at closely
                             enough to answer some questions about its
                             characteristics. 
-                            <a href="#" class="show">More...</a></li>
+                            <a class="show">More...</a></li>
                             <li class="hidden">You may want to collect all or
                             part of the plant, or take some photos or make
                             sketches that you can refer to later.</li>
@@ -92,7 +92,7 @@
                             features of your plant with the "Key
                             Characteristics" listed for each plant group and
                             "Exceptions," which will help you avoid mixing up
-                            groups. <a href="#" class="show">More...</a></li>
+                            groups. <a class="show">More...</a></li>
                             <li class="hidden">If your plant isn't in one of
                             the first three groups, press the "Show me other
                             groups" button and new choices will appear.</li>
@@ -119,8 +119,7 @@
                             traits that would cause many people to think of
                             them as similar. For example, the Aquatic Plant
                             group contains many species of plants that live in
-                            or near water. <a href="#"
-                                class="show">More...</a></li>
+                            or near water. <a class="show">More...</a></li>
                             <li class="hidden">We have defined our groups as
                             handy, contrasting categories that are easy to
                             tell apart. They are not strict scientific
@@ -150,7 +149,7 @@
                             plant or a broad-leaved plant.</li>
                             <li>When you've found the subgroup your plant
                             belongs to, click "My plant is in this subgroup." 
-                            <a href="#" class="show">More...</a></li>
+                            <a class="show">More...</a></li>
                             <li class="hidden">If your plant doesn't fit any
                             of the subgroups, click the "Go back one level"
                             button to choose a new group.</li>
@@ -199,7 +198,7 @@
                             this is your plant, click on "That's My Plant" in
                             the pop-up box and you'll be taken to the species
                             full information page.
-                            <a href="#" class="show">More...</a></li>
+                            <a class="show">More...</a></li>
                             <li class="hidden">The set of thumbnails gets
                             smaller as you answer more questions and hone in
                             on your species by the process of
