--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -676,16 +676,16 @@ Level 3 Id styles
     font-size: 10px;
 }
 
-.show {
+#plant-id-3 .show {
     float: right;
     margin: -3px 0 7px 0; /* adjusted due to Dijit menu widget */
 }
-.show label {
+#plant-id-3 .show label {
     height: 16px;
     line-height: 16px;
     vertical-align: middle;
 }
-.show .icon {
+#plant-id-3 .show .icon {
     vertical-align: middle;
 }
 
@@ -1568,7 +1568,6 @@ Getting Started Page Styles
 	border-top: 1px solid #e2dfcb;
 	background: url(/static/images/icons/1.png) left 18px no-repeat;	
 }
-
 #getting-started .second.question {
 	background: url(/static/images/icons/2.png) left 18px no-repeat;	
 }
@@ -1621,7 +1620,7 @@ Getting Started Page Styles
 	width: 280px;
 	height: 32px;
 	margin: 10px 0 0 0;
-	background: url(/static/images/layout/onward-btn.png) 0 0 no-repeat transparent;
+	background: url(/static/images/layout/onward-btn-orange.png) 0 0 no-repeat transparent;
 	text-indent: -9000px;	
 }
 #getting-started a.onward-btn:hover {
@@ -1638,7 +1637,9 @@ Getting Started Page Styles
 #getting-started label.got-it input {
 	margin: 0 5px 0 0;	
 }
-
+#getting-started a.show {
+    cursor: pointer;
+}
 
 /*///////////////////////////**
 Video Help Topics Page Styles
