Add description to plant preview popup on pile/results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1434 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -41,7 +41,9 @@
 						</div><!--Closes .controls-->
 					</div><!--Closes .img-gallery-->
 					
-					<div class="details">					
+                    <div class="details">
+                        <h4>Facts about...</h4>
+                        <p></p>
 						<h4>Characteristics</h4>
 						<ul>
                             <li>CHARACTER: Value</li>
