On the species page, make the Sometimes Confused With items display as a continuous paragraph rather than on separate lines for everything.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1436 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1479,6 +1479,10 @@ table.status td:first-child {
     width: 120px;
 }
 
+#taxon #sidebar dt, #taxon #sidebar dd {
+    display: inline;
+}
+
 #taxon #sidebar .get-help-btn {
 	margin: 0 0 0 10px;	
 }
