Add white borders between scrolling thumbnails on the species page in order to clarify boundaries.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1437 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1554,12 +1554,12 @@ a.enlarge:hover {
     width: 700px;
 }
 #taxon #species-images div.scrollableArea img {
+    border-right: 5px solid #fff;
     float: left;
     margin: 0;
     padding: 0;
     position: relative;
 }
-
 
 /*///////////////////////////**
 Getting Started Page Styles
