Bug fix: the Get More Choices link on the pile/results page no longer pulls up the wrong content when there is a hash in the URL.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1440 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -136,8 +136,7 @@
 
                     <div class="section">
                         <p class="get-more">
-                            <a rel="shadowbox;height=450" href="#modal">
-                            Get More Choices &raquo;</a> 
+                            <a>Get More Choices &raquo;</a> 
                             We'll add a few more ways to narrow your
                             selections.</p>
 			        </div><!--Closes .section-->
