--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -31,8 +31,26 @@
             src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-        <script src="/static/underscore-min.js"></script>   
-        <script src="/static/jquery-1.6.2.min.js"></script>
+        <script src="/static/underscore-min.js"></script>
+
+        <!-- Image Gallery Slider -->
+        <!-- Note: jQuery Tools below contains its own jQuery, v. 1.4.2.
+             Rely on this one for now, in order to avoid conflicts which
+             do occur when loading a newer version too. It also improves
+             download time. -->
+        <script src="/static/jquery.tools.min.js"></script>
+        <script>
+            $(document).ready(function() {
+                $('.img-container').scrollable();
+            });
+        </script>
+
+        <!-- Temporarily remove the 'extra' jQuery here for now until
+             all components' problems can be sorted out. jQuery Tools
+             above comes bundled with jQuery 1.4.2, and having both
+             versions around evidently causes tricky conflicts. -->
+        <!--script src="/static/jquery-1.6.2.min.js"></script-->
+
         <script src="/static/scripts/jquery.mousewheel.min.js"></script>    
         <script src="/static/scripts/jquery.jscrollpane.min.js"></script>
       
@@ -48,20 +66,6 @@
             }
             Shadowbox.init({
                 onOpen: moveCloseLink
-            });
-        </script>
-        <!--Image Gallery Slider-->
-        <!-- TODO: Find out what the gallery really needs from jQuery tools.
-             Be careful with this library because it's configurable and
-             can contain its own (older) version of jQuery. Evidently
-             the noConflict() call below somehow allowed the jScrollPane
-             to finally begin working. -->
-        <script src="/static/jquery.tools.min.js"></script>
-        <script>
-            var jq = jQuery.noConflict();
-            jq(document).ready(function() {
-                //Start
-                jq('.img-container').scrollable();
             });
         </script>
 
