Adjust model and importer to bring in 'friendly title' for pile groups and piles. Make the simple key levels 1-3 use this field for page headings.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1444 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -66,7 +66,7 @@
                             </div><!--Closes .controls-->
                         </div><!--Closes .img-gallery-->
                         <div class="details">
-                            <h3>{{ pilegroup.name }} <span>{{ pilegroup.friendly_name|capfirst }}</span></h3>
+                            <h3>{{ pilegroup.friendly_title }} <span>{{ pilegroup.friendly_name|capfirst }}</span></h3>
                             <p class="key-char">
                                 <span class="section-title">Key Characteristics</span>
                                 {{ pilegroup.key_characteristics|removetags:"div"|safe|capfirst }}
