--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -54,7 +54,7 @@
                             </div><!--Closes .controls-->
                         </div><!--Closes .img-gallery-->
                         <div class="details">
-                            <h3>{{ pile.name }} <span>{{ pile.friendly_name|capfirst }}</span></h3>
+                            <h3>{{ pile.friendly_title }} <span>{{ pile.friendly_name|capfirst }}</span></h3>
                             <p class="key-char">
                                 <span class="section-title">Key Characteristics</span>
                                 {{ pile.key_characteristics|removetags:"div ul li"|safe }}
