changed 'Clear Choices' text to 'Start Over' per user story
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1451 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -142,7 +142,7 @@
 			        </div><!--Closes .section-->
 			
 			        <div class="section">
-				        <h5 class="left help">Clear Choices</h5>
+				        <h5 class="left help">Start Over.</h5>
 				        <a class="clear-all-btn left">Clear All</a>
 				        <div class="clearit"></div>
 			        </div><!--Closes .section-->
