--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -915,12 +915,13 @@ ul.option-list li:hover, ul.option-list li.active {
 
 .get-more {
     line-height: 16px;
+    margin-bottom: 10px;
 }
 .get-more a {
     cursor: pointer;
     display: block;
     font-family: "Trebuchet MS", Trebuchet, Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
     margin: 14px 0 10px;
 }
