Moved and enlargened the "Show me photos of" drop down, per user story 191
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1453 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -677,13 +677,14 @@ Level 3 Id styles
 }
 
 #plant-id-3 .show {
-    float: right;
+    float: left;
     margin: -3px 0 7px 0; /* adjusted due to Dijit menu widget */
 }
 #plant-id-3 .show label {
     height: 16px;
     line-height: 16px;
     vertical-align: middle;
+    font-size: 16px;
 }
 #plant-id-3 .show .icon {
     vertical-align: middle;
