--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -101,7 +101,7 @@
                             <form id="results-display">
                                 <img class="icon" alt=""
                                     src="/static/images/icons/show-me.png">
-                                <label for="image-type-selector">Show
+                                <label for="image-type-selector">Show me 
                                     photos of:</label>
                                 <select dojoType="dijit.form.Select"
                                     id="image-type-selector"
