--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1041,8 +1041,7 @@ but Dojo/Dijit transforms them into divs with ids starting with widget_. */
 }
 .working-area .apply-btn {
     background: url(/static/images/layout/apply-selection.png) no-repeat 0 0 transparent;
-    display: none;
-    float: right;
+    display: inline-block;
     height: 41px;
     margin: 15px 0 0;
     text-align: left;
@@ -1192,7 +1191,7 @@ div.working-area .info .hint p {
 }
 
 div.working-area .actions {
-    text-align: right;
+    text-align: center;
 }
 
 .show label {
