Split species-count management out into a separate class.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1455 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -38,9 +38,12 @@
                     </div><!--Closes #breadcrumb-->
 
                     <h2>Plant Identifier</h2>
-                    <h3>{{ pile.friendly_title }} 
-                        (<span class="species-count">calculating</span> 
-                        matching species)</h3>
+                    <h3>{{ pile.friendly_title }}
+                      <span class="species-count-phrase">
+                        (<span class="species-count">calculating</span>
+                        matching species)
+                      </span>
+                    </h3>
 
                         <div class="already-know">
                             <h6>If you already know the Family or Genus,
