Bugfix 182.19: prevented text from ever spilling out of breadcrumbs; and abbreviated the genus name in the last breadcrumb on each species page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1466 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -41,7 +41,7 @@
                         <li class="last current">
                         <a><img
                             src="/static/images/icons/subgroup.png"
-                            alt="">{{ scientific_name }}</a>
+                            alt="">{{ scientific_name_short }}</a>
                         </li>
                     </ul>
 
