So another test passes: made sure animations are halted when new ones start, and switched plant visibility to be controlled by a class, not a raw style.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1471 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -769,6 +769,9 @@ a.get-more-info:active {
     height: 210px;
     width: 160px; /* prevent long names from blowing out layout; allow wrap */
 }
+.plant-list .plant.in-results {
+    display: block;
+}
 .plant-list .plant.genus_alt {
     background: #fff;
 }
