Test fix: had to remove the horrible onclick="" markup from the get-more- choices Shadowbox before our tests could click the button.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1472 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -9,10 +9,7 @@
                 <!-- The onclick handler needs to be here rather than in the
                      JS code because this HTML gets copied temporarily by
                      Shadowbox.js. -->
-                <a class="get-choices"
-                    onclick="helper.filter_section.query_best_filters();
-                    Shadowbox.close();">Get More
-                    Choices</a>
+                <a class="get-choices">Get More Choices</a>
 				<div class="clearit"></div>
 			</div><!-- // Closes #choices -->
 		</div><!-- // Closes .inner -->	
