--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -145,7 +145,7 @@
 			        </div><!--Closes .section-->
 			
 			        <div class="section">
-				        <h5 class="left help">Start Over.</h5>
+				        <h5 class="left help">Start Over:</h5>
 				        <a class="clear-all-btn left">Clear All</a>
 				        <div class="clearit"></div>
 			        </div><!--Closes .section-->
