Add Habitat to plant preview popups.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1496 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -40,7 +40,9 @@
 					
                     <div class="details">
                         <h4>Facts about...</h4>
-                        <p></p>
+                        <p class="facts"></p>
+                        <h4>Habitat</h4>
+                        <p class="habitat"></p>
 						<h4>Characteristics</h4>
 						<ul>
                             <li>CHARACTER: Value</li>
