Add spacing to length filter measurement controls.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1497 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1176,6 +1176,13 @@ div.working-area .values .zero {
     color: #ccc;
 }
 
+div.working-area .measurement {
+    margin-top: 8px;
+}
+div.working-area .measurement label input {
+    margin: 0 4px 0 8px;
+}
+
 div.working-area .info {
     float: left;
     font-family: Tahoma, sans-serif;
