Expand all the sections on the Getting Started page because there was not very much to expand anyway, and the links weren't being noticed.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1505 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -57,23 +57,22 @@
                         varieties. Many of these plants grow outside of New
                         England, though, so this key is useful well beyond our
                         region.</p>
-                    </div><!-- // Closes .question -->
+                    </div>
                     
                     <div class="second question">
                         <h4>What should I notice about my plant?</h4>
                         <ul>
                             <li>Choose a plant that you can look at closely
                             enough to answer some questions about its
-                            characteristics. 
-                            <a class="show">More...</a></li>
-                            <li class="hidden">You may want to collect all or
+                            characteristics.</li> 
+                            <li>You may want to collect all or
                             part of the plant, or take some photos or make
                             sketches that you can refer to later.</li>
-                            <li class="hidden">Note the plant's location and
+                            <li>Note the plant's location and
                             the habitat it is growing in.</li>
                         </ul>
-                    </div><!-- // Closes .question -->
-                        
+                    </div>
+
                     <div class="third question">
                         <h4>How do I get started using the Plant
                             Identifier?</h4>
@@ -92,16 +91,16 @@
                             features of your plant with the "Key
                             Characteristics" listed for each plant group and
                             "Exceptions," which will help you avoid mixing up
-                            groups. <a class="show">More...</a></li>
-                            <li class="hidden">If your plant isn't in one of
+                            groups.</li>
+                            <li>If your plant isn't in one of
                             the first three groups, press the "Show me other
                             groups" button and new choices will appear.</li>
-                            <li class="hidden">When you've found the group
+                            <li>When you've found the group
                             your plant belongs to, press "My plant is in this
                             group."</li>
                         </ul>
                         <div class="clearit"></div>
-                    </div><!-- // Closes .question -->
+                    </div>
                         
                     <div class="fourth question">
                         <h4>What's a plant group?</h4>
@@ -119,17 +118,17 @@
                             traits that would cause many people to think of
                             them as similar. For example, the Aquatic Plant
                             group contains many species of plants that live in
-                            or near water. <a class="show">More...</a></li>
-                            <li class="hidden">We have defined our groups as
+                            or near water.</li>
+                            <li>We have defined our groups as
                             handy, contrasting categories that are easy to
                             tell apart. They are not strict scientific
                             classifications.</li>
-                            <li class="hidden">A few plant species belong to
+                            <li>A few plant species belong to
                             more than one group in our system, but most have
                             been assigned to a single group with the
                             characteristics that match them best.</li>
                         </ul>
-                    </div><!-- // Closes .question -->
+                    </div>
                         
                     <div class="fifth question">
                         <h4>Once I select a group, what happens next?</h4>
@@ -149,17 +148,17 @@
                             plant or a broad-leaved plant.</li>
                             <li>When you've found the subgroup your plant
                             belongs to, click "My plant is in this subgroup." 
-                            <a class="show">More...</a></li>
-                            <li class="hidden">If your plant doesn't fit any
+                            </li>
+                            <li>If your plant doesn't fit any
                             of the subgroups, click the "Go back one level"
                             button to choose a new group.</li>
-                            <li class="hidden">Once you're familiar with the 
+                            <li>Once you're familiar with the 
                             groups and subgroups, use the Plant Map on the
                             left side of the page to jump directly to the
                             subgroup your plant is in.</li>
                         </ul>
-                    </div><!-- // Closes .question -->
-                        
+                    </div>
+
                     <div class="sixth question">
                         <h4>I've chosen my plant subgroup. What's next?</h4>
                         <a class="screenshot"
@@ -198,7 +197,6 @@
                             this is your plant, click on "That's My Plant" in
                             the pop-up box and you'll be taken to the species
                             full information page.
-                            <a class="show">More...</a></li>
                             <li class="hidden">The set of thumbnails gets
                             smaller as you answer more questions and hone in
                             on your species by the process of
@@ -207,8 +205,8 @@
                             list, click the X button next to the
                             question.</li>
                         </ul>
-                    </div><!-- // Closes .question -->
-                    
+                    </div>
+
                     <a href="{% url simplekey-page 1 %}"
                         class="onward-btn">Onward to Plant Identifier</a>
                     <form>
