Move the expand/collapse (+/-) icons from right to left on the taxon page's character group sections, to make the icons more easily understood and noticed.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1506 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1450,10 +1450,13 @@ ul.full-description li:hover {
 	background-color: #fff;
 }
 ul.full-description li h5 {
-	background: url(/static/images/icons/plus.png) right 50% no-repeat;	
+	background: url(/static/images/icons/plus.png) left 50% no-repeat;
 }
 ul.full-description li ul {
-	display: none;	
+	display: none;
+}
+ul.full-description li h5, ul.full-description li ul {
+    padding-left: 28px;
 }
 ul.full-description li ul li {
 	border-bottom: none;
