Change the Get More Choices link to a button, which looks more clickable/pressable on a variety of computing devices.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1507 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -139,7 +139,7 @@
 
                     <div class="section">
                         <p class="get-more">
-                            <a>Get More Choices &raquo;</a> 
+                            <a class="get-choices">Get More Choices</a>
                             We'll add a few more ways to narrow your
                             selections.</p>
 			        </div><!--Closes .section-->
